(lang dune 3.4)


; There are no opam dependicies
; When I uncomment I get an error that has nothing online
;(generate_opam_files true)
;(authors "Jonathon Lopes")
;(maintainers "jlopes3@jh.edu")
;(package
; (name blokus)
; (synopsis "Blokus")
; (description "A modified version of Blokus")
; (depends
;  (ounit2 (> 2.2.6)) 
;  (core (> 0.15.0)) 
;))
